--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>  
     <header>
-        <img src="assets/images/profile.jpeg" alt="Profile Picture of Snehal Reddy">
+        <img src="profile.jpeg" alt="Profile Picture of Snehal Reddy">
         <h1>Snehal Reddy</h1>
         <p>Welcome to my personal linktree! Here you can find all my important links.</p>
     </header>
